--- a/templates/about.html
+++ b/templates/about.html
@@ -68,5 +68,5 @@
 	</div>
 </div>
 
-<a href='..'><input type="button" class="btn btn-large pull-right" value="Back"></a>
+<a href=".." class="back-btn btn btn-large pull-right">Back</a>
 {% endblock %}
