--- a/templates/email_sent.html
+++ b/templates/email_sent.html
@@ -6,5 +6,5 @@
     {% else %}
         This page has expired
     {% endif %}
-    <a href='..'><button class="btn btn-large" type="button">Back to login</button></a>
+    <a href=".." class="btn btn-large">Back to login</a>
 {% endblock %}
