--- a/templates/login.html
+++ b/templates/login.html
@@ -8,8 +8,8 @@
 	<!-- 			    <label class="checkbox">
 			<input type="checkbox" value="remember-me"> Remember me
 		</label> -->
-		<button class="btn btn-large btn-primary" type="submit">Sign in</button>
-		<a href='register'><button class="btn btn-large" type="button">Register</button></a>
-		<a href='/about'><button class="btn btn-large pull-right" type="button">About</button></a>
+		<input class="submit-btn btn btn-large btn-primary" type="submit" value="Sign in" />
+		<a href="/about" class="about-btn btn btn-large pull-right">About</a>
+		<a href="/register" class="register-btn btn btn-large pull-right spacing-right">Register</a>
 </form>
 {% endblock %}
