--- a/templates/simple-base.html
+++ b/templates/simple-base.html
@@ -14,25 +14,30 @@
 				<h1>Bulletin</h1>
 				<hr />
 				<h3>{{ state }}</h3>
-                {% block formtype %}
-                    <!-- login or register form-->
-                {% endblock %}
+				<div id="content-container">
+	                {% block formtype %}
+	                    <!-- login or register form-->
+	                {% endblock %}
+                </div>
 			</div>
 			</div>
     	</div>
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
+        {% block extrajs %}
+            <!-- login or register form-->
+        {% endblock %}
         <script type="text/javascript">
-          var _gaq = _gaq || [];
-          _gaq.push(['_setAccount', 'UA-36110349-1']);
-          _gaq.push(['_setDomainName', 'bulletinapp.net']);
-          _gaq.push(['_trackPageview']);
-
-          (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-          })();
-      </script>
+	        var _gaq = _gaq || [];
+	        _gaq.push(['_setAccount', 'UA-36110349-1']);
+	        _gaq.push(['_setDomainName', 'bulletinapp.net']);
+	        _gaq.push(['_trackPageview']);
+	
+	        (function() {
+	            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	        })();
+        </script>
     </body>
 </html>
