--- a/templates/group.html
+++ b/templates/group.html
@@ -10,7 +10,7 @@
     <li{% if grpid == "3" %} class="active" {% endif %}><a href="/group/3/">Roomies</a></li>
 {% endblock %}
 
-{% block content %}
+{% block tabcontent %}
 <form method="post" class="clearfix">
     <div class="span12">
 	    <textarea class='input-block-level' placeholder='Communicate with your team...' id="id_message" rows="10" cols="40" name="message"></textarea>
