--- a/static_resources/css/custom.css
+++ b/static_resources/css/custom.css
@@ -18,7 +18,7 @@
 }
 
 #content-container.tab-content {
-    border: 1px solid #DDD;
+    border: 1px solid #ddd;
     border-left: 0;
     margin: 0;
     background-color: white;
