--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -2,7 +2,7 @@
 
 body {
     background-color: #f5f5f5;
-    background-image: url("/static/images/grey.png");
+    background-image: url("/static/images/dark-grey.png");
 }
 
 #self-identity {
@@ -26,8 +26,18 @@ textarea {
     -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
             border-radius: 5px;
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-       -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-            box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
+       -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
+            box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
     font-size: 14px;
+}
+
+#tabs li {
+	background-color: #f5f5f5;
+}
+
+.form-signin ul.errorlist {
+	margin: 0;
+	padding: 0 0 0 15px;
+	list-style: none;
 }
