--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </div>
 {% endblock %}
 
-{% block content %}
+{% block tabcontent %}
 <div class="well" style="text-align: center">
 	<h1>inbox</h1>
 	<p><em>coming soon</em></p>
