--- a/static_resources/css/bootstrap.css
+++ b/static_resources/css/bootstrap.css
@@ -218,30 +218,30 @@ a:hover {
 [class*="span"] {
   float: left;
   min-height: 1px;
-  margin-left: 20px;
+  margin-left: 0px;
 }
 
 .container,
 .navbar-static-top .container,
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
-  width: 940px;
+  width: 960px;
 }
 
 .span12 {
-  width: 940px;
+  width: 960px;
 }
 
 .span11 {
-  width: 860px;
+  width: 880px;
 }
 
 .span10 {
-  width: 780px;
+  width: 800px;
 }
 
 .span9 {
-  width: 700px;
+  width: 720px;
 }
 
 .span8 {
@@ -249,31 +249,31 @@ a:hover {
 }
 
 .span7 {
-  width: 540px;
+  width: 580px;
 }
 
 .span6 {
-  width: 460px;
+  width: 480px;
 }
 
 .span5 {
-  width: 380px;
+  width: 400px;
 }
 
 .span4 {
-  width: 300px;
+  width: 320px;
 }
 
 .span3 {
-  width: 220px;
+  width: 240px;
 }
 
 .span2 {
-  width: 140px;
+  width: 160px;
 }
 
 .span1 {
-  width: 60px;
+  width: 80px;
 }
 
 .offset12 {
@@ -4218,8 +4218,8 @@ input[type="submit"].btn.btn-mini {
 .navbar .brand {
   display: block;
   float: left;
-  padding: 10px 20px 10px;
-  margin-left: -20px;
+  padding: 10px 0;
+  margin-left: 0px;
   font-size: 20px;
   font-weight: 200;
   color: #777777;
@@ -5848,7 +5848,6 @@ a.badge:hover {
   margin-bottom: 30px;
   font-size: 18px;
   font-weight: 200;
-  line-height: 30px;
   color: inherit;
   background-color: #eeeeee;
   -webkit-border-radius: 6px;
