--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -1,26 +1,63 @@
 /* Check and delete styles that conflict in custom.css*/
 
 body {
+	padding-top: 40px;
     background-color: #f5f5f5;
-    background-image: url("/static/images/dark-grey.png");
+    background-image: url("/static/images/whitey.png");
+	text-align: center;
+}
+
+.span2 .well {
+	padding: 5px;
 }
 
 #self-identity {
 	margin-right: 30px;
 }
 
-.spacing-right {
-	margin-right: 10px;
+.avatar {
+	margin-right: 5px;
+}
+
+.container-fluid {
+	display: inline-block;
+	text-align: left;
+}
+
+@media (min-width: 979px) {
+	.navbar-inner {
+		height: 40px;
+	}
+}
+
+.navbar-inner .container-fluid {
+	padding: 0;
+}
+
+.navbar-inner > .container-fluid .span2:first-child {
+	padding: 10px 0;
+	text-align: center;
+}
+
+.post {
+	background-color: white;
+	border-bottom: 1px solid #EEE;
+}
+
+.comment {
+	margin-left: 25px;
+	border-top: 1px solid #EEE;
 }
 
 textarea {
     height: 100px;
+	margin: 0;
     resize: none;
 }
 
-#main, .hero-unit {
+.hero-unit {
+	text-align: left;
     padding: 19px 29px 29px;
-    margin: 0 20px;
     background-color: #fff;
     border: 1px solid #e5e5e5;
     -webkit-border-radius: 5px;
@@ -30,10 +67,6 @@ textarea {
        -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
             box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
     font-size: 14px;
-}
-
-#tabs li {
-	background-color: #f5f5f5;
 }
 
 .form-signin ul.errorlist {
