--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,9 @@
 						{% endblock tabcontent %}
 					</div>
 				</div>
+				<div id='footer'>
+					This is a footer
+				</div>
 			</div>
 			<div class="span2">
                 <div class="well">
@@ -73,6 +76,6 @@
         {% endblock content %}
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js"></script>
-        <script src="/static/js/site.js"></script>
+		<script src="/static/js/jquery.flip.min.js"></script>
     </body>
 </html>
