--- a/templates/group.html
+++ b/templates/group.html
@@ -41,7 +41,7 @@
     {% endfor %}
 
 {% else %}
-    <div class='error'>
+    <div class='alert alert-error'>
         No posts are available.
     </div>
 {% endif %}
