--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 
 {% block username %}
 <div class="pull-right">
-    <div id="self-identity" class="">Welcome, Peter{{ user.first_name }} <a href="#settings" class="">Settings</a> | <a href="/logout" class="">Logout</a></div>
+    <div id="self-identity" class="">Welcome, {{ user.first_name }} <br> <a href="#settings" class="">Settings</a> | <a href="/logout" class="">Logout</a></div>
 </div>
 {% endblock %}
 
 {% block nav %}
 <ul id='team-nav' class="nav nav-list">
     <li {% if not grpid %} class="active" {% endif %} ><a href="/">Inbox</a></li>
-    <li class="nav-header">Teams</li>
+    <li class="nav-header">Groups</li>
     {% for member in user.membership_set.all %}
     <li {% ifequal grpid member.group.id %} class="active" {% endifequal %}>
         <a href="/group/{{ member.group.id }}/">
@@ -18,7 +18,7 @@
     </li>
     {% endfor %}
     <li class='divider'></li>
-    <a class="btn btn-block" href="/create"><i class="icon-plus"></i> New Team</a>
+    <a class="btn btn-block" href="/create"><i class="icon-plus"></i> New Group</a>
 </ul>
 {% endblock %}
 
