Refactored the most basic page; renamed files for consistency

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "simple-base.html" %}
+{% extends "starter_base.html" %}
 
 {% block formtype %}
 
@@ -69,4 +69,4 @@
 </div>
 
 <a href=".." class="back-btn btn btn-large pull-right">Back</a>
-{% endblock %}
+{% endblock formtype %}
