--- a/templates/email_sent.html
+++ b/templates/email_sent.html
@@ -1,4 +1,4 @@
-{% extends "simple-base.html" %}
+{% extends "starter_base.html" %}
 
 {% block formtype %}
     {% if email %}
@@ -7,4 +7,4 @@
         This page has expired
     {% endif %}
     <a href=".." class="btn btn-large">Back to login</a>
-{% endblock %}
+{% endblock formtype %}
