--- a/templates/register.html
+++ b/templates/register.html
@@ -1,14 +1,17 @@
-{% extends "simple-base.html" %}
+{% extends "starter_base.html" %}
 
 {% block formtype %}
-    <form class="form-signin" method="post">{% csrf_token %}
-        <h2 class="form-signin-heading">Register your account</h2>
-        {{ form }}
-        <input class="register-btn btn btn-large btn-primary" type="submit" value="Register" />
-        <a href=".." class="back-btn btn btn-large pull-right">Back</a>
-    </form>
-{% endblock %}
+<form class="form-signin" method="post">
+	{% csrf_token %}
+	<h2 class="form-signin-heading">Register your account</h2>
+	{{ form }}
+	<input class="register-btn btn btn-large btn-primary"
+		type="submit" value="Register" /> <a href=".."
+		class="back-btn btn btn-large pull-right">Back</a>
+
+</form>
+{% endblock formtype %}
 
 {% block extrajs %}
-    <script src="/static/js/register.js"></script>
-{% endblock %}
+<script src="/static/js/register.js"></script>
+{% endblock extrajs %}
