AbstractPost now has a .json() method, comment posting view returns the json

--- a/templates/delete_me.html
+++ b/templates/delete_me.html
@@ -34,7 +34,7 @@
 
                 $.post(url, {message: msg, csrfmiddlewaretoken: csrf}, function(data) {
                     alert(data);
-                });
+                }, 'json');
             });
         });
         </script>
