--- a/templates/register.html
+++ b/templates/register.html
@@ -1,14 +1,14 @@
 {% extends "starter_base.html" %}
 
 {% block formtype %}
-<form class="form-signin" method="post">
+<form class="form-signin loading-spinner-container" method="post">
 	{% csrf_token %}
 	<h2 class="form-signin-heading">Register your account</h2>
 	{{ form }}
 	<input class="register-btn btn btn-large btn-primary"
 		type="submit" value="Register" /> <a href=".."
 		class="back-btn btn btn-large pull-right">Back</a>
-
+    <div class="loading-spinner"></div>
 </form>
 {% endblock formtype %}
 
