--- a/templates/about.html
+++ b/templates/about.html
@@ -1,72 +1,73 @@
 {% extends "starter_base.html" %}
 
 {% block formtype %}
-
-<h2 class="form-signin-heading">What is Bulletin?</h2>
-<p>Bulletin is a collaboration tool for small, private groups. It enables anyone to quickly set up a space for private status updates and comments, which only the group members have access to, allowing quick and easy communication. As it grows, Bulletin will have more functionality to help groups get work done, like project agendas and task lists.</p>
-
-<hr />
-<h2>Our team</h2>
-<div class="row-fluid">
-	<div class="span3">
-	     <img src="https://dl.dropbox.com/u/949104/finn.jpg" alt="Caylan">
+<div class="clearfix">
+	<h2 class="form-signin-heading">What is Bulletin?</h2>
+	<p>Bulletin is a collaboration tool for small, private groups. It enables anyone to quickly set up a space for private status updates and comments, which only the group members have access to, allowing quick and easy communication. As it grows, Bulletin will have more functionality to help groups get work done, like project agendas and task lists.</p>
+	
+	<hr />
+	<h2>Our team</h2>
+	<div class="row-fluid">
+		<div class="span3">
+		     <img src="https://dl.dropbox.com/u/949104/finn.jpg" alt="Caylan">
+		</div>
+		<div class="span3">
+		  <h4> Caylan Lee </h4>
+		  <p><em> Team Lead </em></p>
+		</div>
+		<div class="span3">
+		     <img src="https://dl.dropbox.com/s/wfz2t7fw985qr38/ppc.jpg" alt="Yoong">
+		</div>
+		<div class="span3">
+		  <h4> Yoong Kim </h4>
+		  <p><em> Project Manager </em></p>
+		</div>
 	</div>
-	<div class="span3">
-	  <h4> Caylan Lee </h4>
-	  <p><em> Team Lead </em></p>
+	<br />
+	<div class="row-fluid">
+		<div class="span3">
+		     <img src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/4/000/176/263/229bbff.jpg" alt="Ivan">
+		</div>
+		<div class="span3">
+		  <h4> Ivan Darmansyah </h4>
+		  <p><em> Front End </em></p>
+		</div>
+		<div class="span3">
+		     <img src="https://dl.dropbox.com/s/86r8mbtpjryecom/me_tie.jpg" alt="Andrew">
+		</div>
+		<div class="span3">
+		  <h4> Andrew Davies </h4>
+		  <p><em> Back End </em></p>
+		</div>
 	</div>
-	<div class="span3">
-	     <img src="https://dl.dropbox.com/s/wfz2t7fw985qr38/ppc.jpg" alt="Yoong">
+	<br />
+	<div class="row-fluid">
+		<div class="span3">
+		     <img src="http://photos-2.dropbox.com/t/0/AACUoXAe36AnJ4vxNGReGwO9vARKiUYuvsrQlQUzMyqR2w/10/1588283/jpeg/200x200/1/_/0/4/profile.jpg/n0xwr6nyeb13odr/1FvHVY2nCZ/profile.jpg" alt="Peter">
+		</div>
+		<div class="span3">
+		  <h4> Peter Weisbeck </h4>
+		  <p><em> Front End </em></p>
+		</div>
+		<div class="span3">
+		     <img src="https://gravatar.com/avatar/e6973ed7e8ab0eb6ad316477177cf04f?s=300&d=mm" alt="Kyle">
+		</div>
+		<div class="span3">
+		  <h4> Kyle Boone </h4>
+		  <p><em> Back End </em></p>
+		</div>
 	</div>
-	<div class="span3">
-	  <h4> Yoong Kim </h4>
-	  <p><em> Project Manager </em></p>
+	<br />
+	<div class="row-fluid">
+		<div class="span3">
+		     <img src="https://dl.dropbox.com/s/9if59cc6lg2fe73/1352152367380.jpg" alt="Brian">
+		</div>
+		<div class="span3">
+		  <h4> Brian Oliphant </h4>
+		  <p><em> Back End </em></p>
+		</div>
 	</div>
+	
+	<a href=".." class="back-btn btn btn-large pull-right">Back</a>
 </div>
-<br />
-<div class="row-fluid">
-	<div class="span3">
-	     <img src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/4/000/176/263/229bbff.jpg" alt="Ivan">
-	</div>
-	<div class="span3">
-	  <h4> Ivan Darmansyah </h4>
-	  <p><em> Front End </em></p>
-	</div>
-	<div class="span3">
-	     <img src="https://dl.dropbox.com/s/86r8mbtpjryecom/me_tie.jpg" alt="Andrew">
-	</div>
-	<div class="span3">
-	  <h4> Andrew Davies </h4>
-	  <p><em> Back End </em></p>
-	</div>
-</div>
-<br />
-<div class="row-fluid">
-	<div class="span3">
-	     <img src="http://photos-2.dropbox.com/t/0/AACUoXAe36AnJ4vxNGReGwO9vARKiUYuvsrQlQUzMyqR2w/10/1588283/jpeg/200x200/1/_/0/4/profile.jpg/n0xwr6nyeb13odr/1FvHVY2nCZ/profile.jpg" alt="Peter">
-	</div>
-	<div class="span3">
-	  <h4> Peter Weisbeck </h4>
-	  <p><em> Front End </em></p>
-	</div>
-	<div class="span3">
-	     <img src="https://gravatar.com/avatar/e6973ed7e8ab0eb6ad316477177cf04f?s=300&d=mm" alt="Kyle">
-	</div>
-	<div class="span3">
-	  <h4> Kyle Boone </h4>
-	  <p><em> Back End </em></p>
-	</div>
-</div>
-<br />
-<div class="row-fluid">
-	<div class="span3">
-	     <img src="https://dl.dropbox.com/s/9if59cc6lg2fe73/1352152367380.jpg" alt="Brian">
-	</div>
-	<div class="span3">
-	  <h4> Brian Oliphant </h4>
-	  <p><em> Back End </em></p>
-	</div>
-</div>
-
-<a href=".." class="back-btn btn btn-large pull-right">Back</a>
 {% endblock formtype %}
