--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "starter_base.html" %}
 
 {% block formtype %}
-<form class="form-signin" method="post">
+<form class="form-signin clearfix" method="post">
     {% csrf_token %}
     <h2 class="form-signin-heading">Please sign in</h2>
 	<input id="id_email" type="text" name="email" maxlength="40" class="input-block-level" placeholder="Email address">
@@ -9,7 +9,7 @@
 	<!-- 			    <label class="checkbox">
 			<input type="checkbox" value="remember-me"> Remember me
 		</label> -->
-	<input class="submit-btn btn btn-large btn-primary" type="submit" value="Sign in" />
+	<input class="submit-btn btn btn-large btn-primary pull-left" type="submit" value="Sign in" />
 	<a href="/about" class="about-btn btn btn-large pull-right">About</a>
 	<a href="/register" class="register-btn btn btn-large pull-right spacing-right">Register</a>
 </form>
