--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
 	<input class="register-btn btn btn-large btn-primary pull-left"
 		type="submit" value="Register" /> <a href=".."
 		class="back-btn btn btn-large pull-right">Back</a>
-    <div class="loading-spinner"></div>
+    <div class="loading-spinner hide"></div>
 </form>
 {% endblock formtype %}
 
